[package]
name = "particles"
version = "0.1.0"
authors = ["wjviant <wjviant@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32"
winit = "0.29"
rand = "0.8"
scoped_threadpool = "0.1"
futures = { version = "0.3.31", features = ["thread-pool"] }